# OracleGuard

./: .gitignore  README.md  analysis_refinement.py  architecture.md  differential_testing.py  example.py  generated.py  llm_assertion_gen.py  main.py  models.json  models.txt  oracleguard.py  prefix_generation.py  pyproject.toml  static_analysis.py
benchmarks/: analyze_results.py  compare_models.py  humaneval_loader.py  run_benchmark.py  validate_method.py
oracleguard/: __init__.py  analysis.py  assertion_generation.py  differential_testing.py  pipeline.py  prefix_generation.py  static_analysis.py
paper/: OracleGuard (2)-1.docx  old.tex  paper.tex  references.bib
results/cohere/: command-a-03-2025.json  command-r-08-2024.json
results/gemini/: gemini-2.5-flash-lite.json  gemini-2.5-flash.json  gemini-3.0-flash.json  gemini-3.1-flash-lite.json
results/groq/: kimi-k2-instruct.json  llama-3.1-8b-instant.json  qwen3-32b.json
results/nvidia/: nvidia-devstral-123b.json  nvidia-falcon3-7b.json  nvidia-mistral-7b.json  nvidia-phi3-medium.json  nvidia-qwen-coder-7b.json
results/old/: glm_5problems.json  gpt_oss_15problems.json  gpt_oss_5problems.json  llama_5problems.json  qwen_2problems_logged_2025-04-07.json  qwen_5problems_2025-04-07.json
results/openai/: gpt-4.1-mini.json  gpt-4o.json  gpt-5.1.json  gpt-5.4.json  o4-mini.json
results/openrouter/: gemma-3-4b-it-free.json  glm-4.5-air-free.json  gpt-oss-20b-free.json  lfm-2.5-1.2b-instruct-free.json  minimax-m2.5-free.json  nemotron-3-nano-30b-free.json  qwen3.6-plus-free.json
(+3 files in other folders)
