[project]
name = "oracleguard"
version = "0.1.0"
description = "Trust-Scored LLM-Based Test Oracle Generation with Differential Validation"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "evalplus>=0.3.1",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all = ["openai>=1.0", "anthropic>=0.20"]

[project.scripts]
oracleguard = "main:main"
